tests/rosetta/out/Fortran/arithmetic-geometric-mean-calculate-pi.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program arithmetic_geometric_mean_calculate_pi
  implicit none
    integer :: guess
    integer :: i
    integer :: a
    integer :: g
    integer :: sum
    integer :: pow
      integer :: t
      integer :: u
      integer :: diff
    integer :: pi
    character(len=100) :: s0
  main()
  contains
  recursive real function abs(x) result(res)
    real, intent(in) :: x
    if ((x < 0)) then
      res = -x
      return
    end if
    res = x
    return
  end function abs
  recursive real function sqrtApprox(x) result(res)
    real, intent(in) :: x
    guess = x
    i = 0
    do while ((i < 20))
      guess = ((((guess + x) / guess)) / 2)
      i = (i + 1)
    end do
    res = guess
    return
  end function sqrtApprox
  recursive real function agmPi() result(res)
    a = 1
    g = (1 / sqrtApprox(2))
    sum = 0
    pow = 2
    do while ((abs((a - g)) > 1e-15))
      t = (((a + g)) / 2)
      u = sqrtApprox((a * g))
      a = t
      g = u
      pow = (pow * 2)
      diff = (((a * a) - g) * g)
      sum = ((sum + diff) * pow)
    end do
    pi = (((4 * a) * a) / ((1 - sum)))
    res = pi
    return
  end function agmPi
  recursive integer function main() result(res)
    write(s0,'(G0)') agmPi()
    print *, s0
  end function main
end program arithmetic_geometric_mean_calculate_pi
